Alteração na String de Conexão

--- a/TesteTecnico/appsettings.json
+++ b/TesteTecnico/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TesteTecnico;User ID=root;Password=root;Connect Timeout=20"
-    //"DefaultConnection": "Server=sql10.freemysqlhosting.net;Database=sql10475762;User ID=sql10475762;Password=gLKx7jVd9i;Connect Timeout=20"
+    "LocalConnection": "Server=localhost;Database=TesteTecnico;User ID=root;Password=root;Connect Timeout=20",
+    "OnlineConnection": "Server=sql10.freemysqlhosting.net;Database=sql10475762;User ID=sql10475762;Password=gLKx7jVd9i;Connect Timeout=20"
   },
   "Logging": {
     "LogLevel": {
